--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -9,3 +9,10 @@ body {
 	width: 100%;
 	height: 100%;
 }
+
+.popover {
+	background-color: white;
+	color: black;
+	padding: 10px;
+	border-radius: 3px;
+}
