Add notification UI

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -17,3 +17,10 @@ body {
 	border-radius: 3px;
 	z-index: 100;
 }
+
+.notification {
+	position: absolute;
+	top: 10px;
+	left: 10px;
+	width: 250px;
+}
