--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,7 +20,14 @@ body {
 
 .notification {
 	position: absolute;
-	top: 10px;
-	left: 10px;
+	opacity: 0.5;
 	width: 250px;
+	top: -20px;
+	left: 10px;
+	transition: all 0.5s ease;
+}
+
+.notification.shown {
+	opacity: 1;
+	top: 10px;
 }
